retina: Treat the retina feature as an IT6251-present flag
In v1, the feature_retina indicated whether a high-resolution screen was
attached.  Now that we use individual channels to configure that, repurpose
this flag to indicate whether there is an IT6251 present or not.

Signed-off-by: Sean Cross <xobs@kosagi.com>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -122,6 +122,13 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="it6251CB">
+             <property name="text">
+              <string>IT6251 LVDS-to-eDP bridge</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QCheckBox" name="eepromOopsCB">
              <property name="text">
               <string>EEPROM Oops storage</string>
